@@ -2324,6 +2324,7 @@ frame3dd -i InFile -o OutFile [OPTIONS]
   -c            data check only - the output data reviews the input data
   -q            suppress screen output except for warning messages
   -w            write stiffness and mass matrices to files named Ks Kd Md
+  -x            suppress writing of 't' or 'c' for sign of axial forces
   -s  On|Off    On: include shear deformation or Off: neglect ...
   -g  On|Off    On: include geometric stiffness or Off: neglect ...
   -e  value     level of deformation exaggeration for Gnuplot output
